--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,21 +16,30 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="#fff">
+        android:background="@drawable/raviblur">
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_centerInParent="true">
 
             <LinearLayout
                 android:id="@+id/email_login_form"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
+                android:layout_gravity="center"
                 android:orientation="vertical"
-                android:padding="9sp">
+                android:padding="16dp">
 
+                <TextView
+                    android:id="@+id/loginlogo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="SeekPick"
+                    android:textSize="50dp"
+                    android:textStyle="bold"/>
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
@@ -62,10 +71,59 @@
 
                 <Button
                     android:id="@+id/login_button"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
                     android:text="Sign in"
-                    android:textSize="20sp" />
+                    android:textSize="20dp"
+                    android:background="@drawable/button_border"/>
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/social_accnt"
+                    android:textSize="20dp" />
+
+                <LinearLayout
+                    android:layout_margin="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+
+                    <Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"/>
+
+                    <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/fblogo"
+                        android:background="@null" />
+                    <Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"/>
+
+                    <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:src="@drawable/gplus"/>
+                    <Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"/>
+
+
+                </LinearLayout>
 
             </LinearLayout>
         </ScrollView>
@@ -81,14 +139,15 @@
                 android:id="@+id/login_sign_up"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="First time here, SIGN UP"
-                android:textAlignment="center" />
+                android:text="First time here?, SIGN UP"
+                android:textAlignment="center"
+                android:textSize="20dp" />
 
             <ImageView
                 android:id="@+id/login_up"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_up_arrow" />
+                android:src="@drawable/up_arrow" />
         </LinearLayout>
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
