--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,40 +5,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.solipsism.seekpick.SearchActivity">
-    <LinearLayout
-        android:layout_weight="1"
-        android:gravity="center"
+
+    <FrameLayout
+        android:id="@+id/searchFrame"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="9sp">
+        android:layout_height="0dp"
+        android:layout_weight="1">
+    </FrameLayout>
 
-        <EditText
-            android:id="@+id/search_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@android:drawable/ic_search_category_default"
-            android:hint="Search Stores...">
-
-        </EditText>
-
-        <Button
-            android:id="@+id/search_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="SEARCH" />
-
-    </LinearLayout>
-</ScrollView>
-    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -58,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10sp"
+            android:contentDescription="^"
             android:src="@drawable/ic_up_arrow" />
     </LinearLayout>
 </LinearLayout>
