Shivani commit with edit and get user api done..... wuhooo

--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -16,7 +16,7 @@
             android:layout_centerInParent="true">
 
             <LinearLayout
-                android:id="@+id/email_login_form"
+                android:id="@+id/my_profile_frag"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
@@ -24,7 +24,7 @@
                 android:padding="16sp">
 
                 <TextView
-                    android:id="@+id/signuplogo"
+                    android:id="@+id/myprofilelogo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -38,7 +38,7 @@
                     android:layout_height="wrap_content">
 
                     <AutoCompleteTextView
-                        android:id="@+id/signup_email"
+                        android:id="@+id/my_profile_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Email"
@@ -52,7 +52,7 @@
                     android:layout_height="wrap_content">
 
                     <AutoCompleteTextView
-                        android:id="@+id/signup_name"
+                        android:id="@+id/my_profile_shopname"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Shop Name /Business Identity "
@@ -66,7 +66,7 @@
                     android:layout_height="wrap_content">
 
                     <AutoCompleteTextView
-                        android:id="@+id/signup_address"
+                        android:id="@+id/my_profile_shopaddress"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Address"
@@ -85,7 +85,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
                         <AutoCompleteTextView
-                            android:id="@+id/signup_pincode"
+                            android:id="@+id/my_profile_pincode"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:hint="PIN CODE"
@@ -94,7 +94,7 @@
                     </android.support.design.widget.TextInputLayout>
 
                     <ImageButton
-                        android:id="@+id/signup_location"
+                        android:id="@+id/my_profile_location"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -106,7 +106,7 @@
                     android:layout_height="wrap_content">
 
                     <AutoCompleteTextView
-                        android:id="@+id/signup_phone"
+                        android:id="@+id/my_profile_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Phone Number"
@@ -120,7 +120,7 @@
                     android:layout_height="wrap_content">
 
                     <AutoCompleteTextView
-                        android:id="@+id/signup_username"
+                        android:id="@+id/my_profile_username"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Username"
@@ -134,7 +134,7 @@
                     android:layout_height="wrap_content">
 
                     <AutoCompleteTextView
-                        android:id="@+id/signup_password"
+                        android:id="@+id/my_profile_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Password"
@@ -148,7 +148,7 @@
                     android:layout_height="wrap_content">
 
                     <AutoCompleteTextView
-                        android:id="@+id/signup_cpassword"
+                        android:id="@+id/my_profile_cpassword"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Confirm Password"
@@ -157,7 +157,7 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <Button
-                    android:id="@+id/signup_button"
+                    android:id="@+id/my_profile_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Save Changes"
