--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -3,6 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.solipsism.seekpick.Dash.AddProductFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -23,18 +27,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-    <TextView
-        android:id="@+id/itemname1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Product Name"
-        android:textSize="20dp"/>
+        <TextView
+            android:id="@+id/itemname1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Product Name"
+            android:textSize="20dp"/>
         <EditText
             android:id="@+id/itemname"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:hint="Enter name of product"/>
-        </LinearLayout>
+    </LinearLayout>
     <Space
         android:layout_width="match_parent"
         android:layout_height="40dp" />
@@ -42,19 +46,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-    <TextView
-        android:id="@+id/itemprice1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Product Price"
-        android:textSize="20dp"/>
-           <EditText
-               android:id="@+id/itemprice"
-               android:layout_width="match_parent"
-               android:layout_height="40dp"
-               android:hint="Enter MRP in Rs."/>
+        <TextView
+            android:id="@+id/itemprice1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Product Price"
+            android:textSize="20dp"/>
+        <EditText
+            android:id="@+id/itemprice"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter MRP in Rs."/>
 
-</LinearLayout>
+    </LinearLayout>
     <Space
         android:layout_width="match_parent"
         android:layout_height="40dp" />
@@ -71,9 +75,18 @@
         <EditText
             android:id="@+id/tags"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:hint="Enter keywords(one or two word long)"/>
 
+
     </LinearLayout>
+    <Button
+
+        android:id="@+id/upload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Upload"
+        />
 
 </LinearLayout>
