--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -58,6 +58,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10sp"
-            android:src="@drawable/ic_up_arrow" />
+            android:src="@drawable/up_arrow" />
     </LinearLayout>
 </LinearLayout>
