--- a/app/src/main/res/layout/fragment_my_products.xml
+++ b/app/src/main/res/layout/fragment_my_products.xml
@@ -1,11 +1,20 @@
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
+    android:padding="16dp"
     tools:context="com.solipsism.seekpick.Dash.MyProductsFragment">
 
     <!-- TODO: Update blank fragment layout -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_margin="5dp"
+        android:text="Your Products"
+        android:gravity="center"
+        android:textStyle="bold"/>
     <ListView
         android:numColumns="2"
         android:gravity="center"
@@ -15,5 +24,4 @@
         android:layout_height="476dp"
         android:id="@+id/List_view"
         android:layout_weight="0.68" />
-
-</FrameLayout>
+</LinearLayout>
