--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -12,7 +12,7 @@
         android:weightSum="1">
         <Space
             android:layout_width="match_parent"
-            android:layout_height="55dp" />
+            android:layout_height="50dp" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,7 +41,7 @@
             <Button
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-
+                android:layout_gravity="center"
                 android:background="@drawable/edit"
                 android:id="@+id/editorder"/>
             <Space
@@ -53,6 +53,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:background="@drawable/delete"
+                android:layout_gravity="center"
                 android:id="@+id/remove"
                 android:onClick="onRemoveClick"/>
         </LinearLayout>
