--- a/app/src/main/res/layout/fragment_my_products.xml
+++ b/app/src/main/res/layout/fragment_my_products.xml
@@ -1,13 +1,20 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
     tools:context="com.solipsism.seekpick.Dash.MyProductsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="my product fragment" />
+        android:layout_height="wrap_content"
+        android:text="Your Products"
+        android:textAlignment="center"
+        android:textSize="30sp" />
 
-</FrameLayout>
+    <ListView
+        android:id="@+id/List_view"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent" />
+</LinearLayout>
