--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,18 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_search"
         android:icon="@android:drawable/ic_search_category_default"
         android:title="Search" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_add_product"
         android:icon="@android:drawable/ic_menu_add"
-        android:title="Add" />
+        android:title="Add Product" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:id="@+id/navigation_my_product"
+        android:icon="@drawable/ic_my_products"
         android:title="My Products" />
+    <item
+        android:id="@+id/navigation_my_profile"
+        android:icon="@drawable/ic_my_profile"
+        android:title="My Profile" />
 
 </menu>
