--- a/app/src/main/res/layout/fragment_my_products.xml
+++ b/app/src/main/res/layout/fragment_my_products.xml
@@ -2,19 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp"
-    tools:context="com.solipsism.seekpick.Dash.MyProductsFragment"
-    android:weightSum="1">
+    android:padding="9sp"
+    android:weightSum="1"
+    tools:context="com.solipsism.seekpick.Dash.MyProductsFragment">
 
     <ListView
-        android:numColumns="2"
-        android:gravity="center"
-        android:columnWidth="100dp"
-        android:stretchMode="columnWidth"
-        android:layout_width="fill_parent"
-        android:layout_height="476dp"
         android:id="@+id/List_view"
-        android:layout_weight="0.68" />
-
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
