--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,6 +41,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Username"
+                        android:drawableStart="@drawable/users"
+                        android:drawablePadding="4sp"
                         android:inputType="textEmailAddress"
                         android:maxLines="1" />
                 </android.support.design.widget.TextInputLayout>
@@ -55,6 +57,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Password"
+                        android:drawableStart="@drawable/password"
+                        android:drawablePadding="4sp"
                         android:inputType="textPassword"
                         android:maxLines="1" />
                 </android.support.design.widget.TextInputLayout>
@@ -88,6 +92,7 @@
                 android:id="@+id/login_up"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:contentDescription="UP"
                 android:src="@drawable/ic_up_arrow" />
         </LinearLayout>
     </RelativeLayout>
