--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
-                android:padding="16sp">
+                android:padding="9sp">
 
 
                 <android.support.design.widget.TextInputLayout
@@ -41,6 +41,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Email"
+                        android:drawableStart="@drawable/email"
+                        android:drawablePadding="4sp"
                         android:inputType="textEmailAddress"
                         android:maxLines="1" />
                 </android.support.design.widget.TextInputLayout>
@@ -55,6 +57,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Shop Name /Business Identity "
+                        android:drawableStart="@drawable/store"
+                        android:drawablePadding="4sp"
                         android:inputType="text"
                         android:maxLines="1" />
                 </android.support.design.widget.TextInputLayout>
@@ -69,6 +73,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Address"
+                        android:drawableStart="@drawable/directions"
+                        android:drawablePadding="4sp"
                         android:inputType="text" />
                 </android.support.design.widget.TextInputLayout>
 
@@ -88,6 +94,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:hint="PIN CODE"
+                            android:drawableStart="@drawable/placeholder"
+                            android:drawablePadding="4sp"
                             android:inputType="number"
                             android:maxLength="6" />
                     </android.support.design.widget.TextInputLayout>
@@ -95,9 +103,11 @@
                     <ImageButton
                         android:id="@+id/signup_location"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="55sp"
+                        android:padding="4sp"
                         android:layout_weight="1"
-                        android:src="@android:drawable/ic_menu_mylocation" />
+                        android:contentDescription="Add Location"
+                        android:src="@drawable/ic_add_location" />
                 </LinearLayout>
 
                 <android.support.design.widget.TextInputLayout
@@ -109,6 +119,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Phone Number"
+                        android:drawableStart="@drawable/phone"
+                        android:drawablePadding="4sp"
                         android:inputType="number"
                         android:maxLength="10" />
                 </android.support.design.widget.TextInputLayout>
@@ -123,6 +135,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Username"
+                        android:drawableStart="@drawable/users"
+                        android:drawablePadding="4sp"
                         android:inputType="text"
                         android:maxLines="1" />
                 </android.support.design.widget.TextInputLayout>
@@ -137,6 +151,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Password"
+                        android:drawableStart="@drawable/password"
+                        android:drawablePadding="4sp"
                         android:inputType="textPassword"
                         android:maxLines="1" />
                 </android.support.design.widget.TextInputLayout>
@@ -151,6 +167,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Confirm Password"
+                        android:drawableStart="@drawable/password"
+                        android:drawablePadding="4sp"
                         android:inputType="textPassword"
                         android:maxLines="1" />
                 </android.support.design.widget.TextInputLayout>
