--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
-                android:padding="16sp">
+                android:padding="9sp">
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
@@ -38,6 +38,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Email"
+                        android:drawableStart="@drawable/email"
+                        android:drawablePadding="4sp"
                         android:inputType="textEmailAddress"
                         android:maxLines="1" />
                 </android.support.design.widget.TextInputLayout>
@@ -52,6 +54,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Shop Name /Business Identity "
+                        android:drawableStart="@drawable/store"
+                        android:drawablePadding="4sp"
                         android:inputType="text"
                         android:maxLines="1" />
                 </android.support.design.widget.TextInputLayout>
@@ -66,6 +70,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Address"
+                        android:drawableStart="@drawable/directions"
+                        android:drawablePadding="4sp"
                         android:inputType="text" />
                 </android.support.design.widget.TextInputLayout>
 
@@ -86,6 +92,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:hint="PIN CODE"
+                            android:drawableStart="@drawable/placeholder"
+                            android:drawablePadding="4sp"
                             android:inputType="number"
                             android:maxLength="6" />
                     </android.support.design.widget.TextInputLayout>
@@ -93,9 +101,11 @@
                     <ImageButton
                         android:id="@+id/my_profile_location"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="55sp"
+                        android:padding="4sp"
                         android:layout_weight="1"
-                        android:src="@android:drawable/ic_menu_mylocation" />
+                        android:contentDescription="Add Location"
+                        android:src="@drawable/ic_add_location" />
                 </LinearLayout>
 
                 <android.support.design.widget.TextInputLayout
@@ -107,6 +117,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Phone Number"
+                        android:drawableStart="@drawable/phone"
+                        android:drawablePadding="4sp"
                         android:inputType="number"
                         android:maxLength="10" />
                 </android.support.design.widget.TextInputLayout>
@@ -121,6 +133,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Username"
+                        android:drawableStart="@drawable/users"
+                        android:drawablePadding="4sp"
                         android:inputType="text"
                         android:maxLines="1" />
                 </android.support.design.widget.TextInputLayout>
@@ -135,6 +149,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Password"
+                        android:drawableStart="@drawable/password"
+                        android:drawablePadding="4sp"
                         android:inputType="textPassword"
                         android:maxLines="1" />
                 </android.support.design.widget.TextInputLayout>
@@ -149,6 +165,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Confirm Password"
+                        android:drawableStart="@drawable/password"
+                        android:drawablePadding="4sp"
                         android:inputType="textPassword"
                         android:maxLines="1" />
                 </android.support.design.widget.TextInputLayout>
@@ -158,7 +176,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Save"
-                    android:textSize="20dp" />
+                    android:textSize="20sp" />
 
             </LinearLayout>
         </ScrollView>
