--- a/app/src/main/res/layout/products_form.xml
+++ b/app/src/main/res/layout/products_form.xml
@@ -1,68 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="match_parent"
         android:id="@+id/list"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="1">
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="55dp" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5sp"
+        android:layout_marginBottom="4sp"
+        android:weightSum="10"
+        android:orientation="horizontal">
+
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0sp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_weight="9"
+            android:layout_marginEnd="5sp"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/name1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Name"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/price1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:text="price"
+                    android:textSize="20sp" />
+            </RelativeLayout>
+
             <TextView
-                android:id="@+id/name1"
-                android:textSize="20dp"
-                android:textStyle="bold"
+                android:id="@+id/tag1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-            />
+                android:layout_marginTop="5sp"
+                android:text="tags"
+                android:textSize="20sp" />
 
-            <Space
-                android:layout_width="10dp"
-                android:layout_height="10dp" />
-
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="70dp"
-                android:textStyle="bold"
-                android:textSize="20dp"
-                android:id="@+id/price1" />
-            <Space
-                android:layout_width="10dp"
-                android:layout_height="10dp" />
-
-
-            <Button
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-
-                android:background="@drawable/edit"
-                android:id="@+id/edit_product"/>
-            <Space
-                android:layout_width="10dp"
-                android:layout_height="10dp" />
-
-            <Button
-                android:layout_marginLeft="20dp"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:background="@drawable/delete"
-                android:id="@+id/delete_product"
-                android:onClick="onDeleteClick"/>
 
         </LinearLayout>
-        <TextView
-            android:layout_width="wrap_content"
+
+        <LinearLayout
+            android:layout_width="0sp"
             android:layout_height="wrap_content"
-            android:id="@+id/tag1"
-            android:textSize="20dp"/>
+            android:layout_alignParentEnd="true"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/edit_product"
+                android:layout_width="30sp"
+                android:layout_height="30sp"
+                android:background="@drawable/edit" />
+
+            <Button
+                android:id="@+id/delete_product"
+                android:layout_width="30sp"
+                android:layout_height="30sp"
+                android:layout_marginTop="4sp"
+                android:background="@drawable/delete"
+                android:onClick="onDeleteClick" />
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
