--- a/app/src/main/res/menu/dash_menu.xml
+++ b/app/src/main/res/menu/dash_menu.xml
@@ -2,5 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/logout"
+        android:icon="@drawable/logout"
         android:title="Logout" />
 </menu>
