--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -8,7 +8,7 @@
 
     <item
         android:id="@+id/navigation_add_product"
-        android:icon="@android:drawable/ic_menu_add"
+        android:icon="@drawable/ic_add_circle"
         android:title="Add Product" />
 
     <item
